# strategy-learner

./: .gitignore  CMakeLists.txt  README.md  get_strategy_learner_includes.m  get_strategy_learner_libs.m  make_plots.py  make_strategy_learner.m  requirements.txt
evaluation/: __init__.py  load_experiments.py  plot_experiments.py
experiments/: train.m
experiments/functions/: create_analysis_plots.m  create_config_dirs.m  create_generation_config.m  create_testing_config.m  create_training_config.m  generate_inference_settings.m  generate_settings_files.m  generate_training_settings.m  get_rand.m  get_settings_file_names.m  init_rl.m  initialize_simulator.m  load_experiment_config.m  load_settings.m  run_algorithm.m  run_baseline.m  run_evaluation_set.m  run_experiment.m  run_experiment_set.m  run_rl.m  set_permissions.m  set_sim_settings.m  train_rl.m
inference/: README.md
inference/include/: inference_c_api.h
inference/libs/: install-libtorch.sh
inference/src/: base_model.cpp  base_model.h  config_loader.cpp  config_loader.h  inference.cpp  inference.h  info_shared_memory.cpp  info_shared_memory.h  main.cpp  simple_pg_model.cpp  simple_pg_model.h  timer.cpp  (+9 more)
scripts/: gcc_to_4.sh  gcc_to_5.sh
src/: shared_memory.c  shared_memory.h  sl_data_types.h  sl_data_types_msl.h  sl_debug.c  sl_debug.h  sl_general_functions.c  sl_general_functions.h  sl_includes.h  sl_logging.c  sl_logging.h  sl_model.c  sl_model.h  sl_shared_memory.c  sl_shared_memory.h  sl_tasks.c  sl_tasks.h  strategy_learner.c  strategy_learner.h
training/: train_simple_pg.py  train_vpg.py
(+16 files in other folders)
